--- a/yudao-server/src/main/resources/application.yaml
+++ b/yudao-server/src/main/resources/application.yaml
@@ -259,11 +259,11 @@ yudao:
     express:
       client: kd_niao
       kd-niao:
-        api-key: cb022f1e-48f1-4c4a-a723-9001ac9676b8
+        api-key: xxxx
         business-id: 1809751
       kd100:
         key: pLXUGAwK5305
-        customer: E77DF18BE109F454A5CD319E44BF5177
+        customer: xxxx
 
 debug: false
 
